<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@mipmap/home_outline"
        android:title="@string/home" />
    <item
        android:id="@+id/myListings"
        android:icon="@mipmap/person_outline"
        android:title="@string/myListings" />
    <item
        android:id="@+id/addListing"
        android:icon="@mipmap/add"
        android:title="@string/addListing" />
    <item
        android:id="@+id/favorite"
        android:icon="@mipmap/heart_outline"
        android:title="@string/favorites" />
    <item
        android:id="@+id/accountSettings"
        android:icon="@mipmap/user_settings_outline"
        android:title="@string/accountSettings" />
</menu>