<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolBarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/activityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/accountSettings" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/oldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBarContainer"
        android:hint="@string/oldEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldEmail"
        android:hint="@string/newEmail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newEmail"
        android:focusableInTouchMode="true"
        android:hint="@string/currentPassword"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPassword"
        android:focusableInTouchMode="true"
        android:hint="@string/newPassword"
        android:imeOptions="actionUnspecified"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/changeEmail"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/changeEmail"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePassword"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/changePassword"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePassword"
        android:layout_centerHorizontal="true"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/removeUser"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_centerHorizontal="true"
        android:text="@string/removeUser"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changeEmailButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/removeUser"
        android:text="@string/changeEmail"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_centerVertical="true" />

    <Button
        android:id="@+id/changePasswordButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeEmailButton"
        android:layout_centerInParent="true"
        android:text="@string/changePassword"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sendPasswordResetEmailButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePasswordButton"
        android:layout_centerInParent="true"
        android:text="@string/sendPasswordResetEmail"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendPasswordResetEmailButton"
        android:layout_centerInParent="true"
        android:text="@string/removeUser"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remove_user_button"
        android:layout_centerInParent="true"
        android:text="@string/signOut"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>