<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listings">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolBarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/overflowMenuColor"
            app:contentInsetStart="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBarContainer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/listingImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/listingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/likesCount"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/listingName"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingName"
                android:layout_centerInParent="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/listingCondition"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingCondition"
                android:layout_centerInParent="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/listingDescription"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listingEmailInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingDescription"
                android:layout_centerInParent="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/listingEmail"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listingPhoneNumberInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingEmailInformation"
                android:layout_centerInParent="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/listingPhone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/likesCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingImage"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/listingLikeCounter"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/likesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingImage"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/likesCounter"
                android:text="@string/listingLikes"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>