<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/dummyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:layout_toStartOf="@id/dummyView"
            android:text="@string/cameraButton" />

        <Button
            android:id="@+id/chooseImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:layout_toEndOf="@id/dummyView"
            android:text="@string/chooseImg" />

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_below="@id/cameraButton"
            android:layout_centerInParent="true"
            android:contentDescription="@string/itemImage"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_centerInParent="true"
            android:hint="@string/itemName"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/chooseConditionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemName"
            android:text="@string/chooseConditionText"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/conditionArray"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseConditionText"
            android:dropDownWidth="match_parent"
            android:entries="@array/conditionArray"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemDescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditionArray"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fadeScrollbars="true"
                android:gravity="top"
                android:hint="@string/itemDescription"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="250"
                android:maxLines="10"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactInformationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescriptionContainer"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <EditText
                android:id="@+id/contactInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fadeScrollbars="true"
                android:gravity="top"
                android:hint="@string/contactInformation"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="250"
                android:maxLines="5"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactInformationContainer"
            android:layout_centerHorizontal="true"
            android:text="@string/submit" />

    </RelativeLayout>
</ScrollView>